2022-09-08T16:23:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016682956
* notice: last 14d: unq all: 2 15
* notice: prev accum: outdated-unq outdated-all / unq all: 169 325 / 180 341
* notice: next accum: outdated-unq outdated-all / unq all: 170 326 / 180 341
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-25] / []

2022-09-08T08:20:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013543414
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 169 325 / 179 340
* notice: next accum: outdated-unq outdated-all / unq all: 169 325 / 180 341
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-08T01:48:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3011930457
* notice: last 14d: unq all: 2 15
* notice: prev accum: outdated-unq outdated-all / unq all: 169 325 / 178 339
* notice: next accum: outdated-unq outdated-all / unq all: 169 325 / 179 340
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-07]

2022-09-07T16:22:17Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3009193957
* notice: last 14d: unq all: 2 14
* notice: prev accum: outdated-unq outdated-all / unq all: 168 324 / 178 339
* notice: next accum: outdated-unq outdated-all / unq all: 169 325 / 178 339
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-24] / []

2022-09-07T01:50:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3004541163