@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-08T16:23:38Z",
+  "timestamp" : "2022-09-09T08:24:28Z",
   "count_outdated" : 326,
   "uniques_outdated" : 170,
   "count" : 341,
-  "uniques" : 180,
+  "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
