@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
