@@ -1,3 +1,11 @@
+2022-09-09T08:24:28Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3021005822
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 170 326 / 180 341
+* notice: next accum: outdated-unq outdated-all / unq all: 170 326 / 181 341
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-26 2022-09-09]
+
 2022-09-08T16:23:38Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016682956
 * notice: last 14d: unq all: 2 15
